basic structure is setup

--- a/background subtraction/c++/Makefile
+++ b/background subtraction/c++/Makefile
@@ -1,7 +1,7 @@
-CC = g++
+CXX ?= g++
 
-CFLAGS = -c -Wall 'pkh-config --cflags opencv'
-LIBS = `pkg-config --libs opencv`
+CXXFLAGS += -c -Wall $(shell pkg-config --cflags opencv)
+LDFLAGS += $(shell pkg-config --libs --static opencv)
 
 all: background_subtraction_main
 
