--- a/background subtraction/yuening/Makefile
+++ b/background subtraction/yuening/Makefile
@@ -1,6 +1,6 @@
 CXX ?= g++
 
-CXXFLAGS += -c -Wall $(shell pkg-config --cflags opencv)
+CXXFLAGS += -c -std=c++11 -Wall $(shell pkg-config --cflags opencv)
 LDFLAGS += $(shell pkg-config --libs --static opencv)
 
 all: main
